minor change BL

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
         </div>
         <div class="dev2">
             <img src="Images/43587406.jpeg">
-            <h1>Brian Delafuente</h1>
+            <h1>Brian Lafuente</h1>
             <p>Boom shackalack we gonna chung risizzle, varius molestie, 
             adipiscing izzle, check it out sizzle pizzle, yo mamma.</p>
         </div>
