fixing names on about

--- a/about.html
+++ b/about.html
@@ -49,13 +49,13 @@
         </div>
         <div class="dev3">
             <img src="Images/44444935.jpeg">
-            <h1>Khanh</h1>
+            <h1>Khanh Vu</h1>
             <p>Bow wow wow maurizzle. Funky fresh da bomb the bizzle, mofo izzle, yippiyo sizzle, bling bling vel, nisi. 
             We gonna chung shizzlin dizzle consectetizzle fo.</p>
         </div>
         <div class="dev4">
             <img src="Images/36775707.jpeg">
-            <h1>connor</h1>
+            <h1>Connor Toale</h1>
             <p>Bow wow wow maurizzle. Funky fresh da bomb the bizzle, mofo izzle, yippiyo sizzle, bling bling vel, nisi. 
             We gonna chung shizzlin dizzle consectetizzle fo.</p>
         </div>
