--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <div class="devs">
         <div class="dev1">
             <img src="Images/IMG-2868.jpeg">
-            <h1>Brandon Hernandez</h1>
+            <h1>Brandon sucks Hernandez</h1>
             <p>Stuff dawg purus. Nullam for sure amizzle that's the shizzle et bow wow wow tincidunt pellentesque. 
             Shizzle my nizzle crocodizzle yo erizzle. </p>
         </div>
