--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,8 @@
         </div>
     </nav>
     <div class="contact">
-        <h1>Contact Us</h1>
+        <h1 id="contact">Contact Us</h1>
+        <div id="map"></div>
         <div class="form">
             <div class="box">
                 <input placeholder="Your name" type="text" tabindex="1" required autofocus>
@@ -36,7 +37,6 @@
                 <button name="submit" type="submit" id="contact-submit">Submit</button>
             </div>
         </div>
-        <div id="map"></div>
         <script>
                 function initMap() {
                   var myLatlng = {lat: 33.749, lng: -84.388};
