--- a/contact.html
+++ b/contact.html
@@ -90,4 +90,4 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2RPBv5Q0-RL92TMZMaL8Zob4E37pKWFk&callback=initMap">
     </script>
     </body>
-    </html>
+    </html
