--- a/service_bundle.html
+++ b/service_bundle.html
@@ -53,8 +53,25 @@
 
 
     <footer>
+            <div class="links">
+                    <div class="link1">
+                        <a href="careers.html"><h5>Careers</h5></a>
+                        <a href="#"><h5>Terms and Conditions</h5></a>
+                        <a href="#"><h5>Privacy Policy</h5></a>
+                    </div>
+                    <div class="link1">
+                        <a href="service_bundle.html"><h5>Services</h5></a>
+                        <a href="about.html"><h5>About</h5></a>
+                        <a href="contact.html"><h5>Contact</h5></a>
+                    </div>
+                    <div class="link1">
+                        <a href="#"><h5>bn,,</h5></a>
+                        <a href="#"><h5>nxioww</h5></a>
+                        <a href="#"><h5>xnwxwpo</h5></a>
+                    </div>
+                </div>
+        
             <div class="testi">
-            
                 <h6>The Proffesional Hobo © 2018</h6>
             </div>
             <div id="icon">
