--- a/results.html
+++ b/results.html
@@ -63,5 +63,6 @@
     
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="script.js"></script>
+        <script src="api.js"></script>
     </body>
     </html>
