--- a/results.html
+++ b/results.html
@@ -32,13 +32,15 @@
                     <tr>
                         <th>Departure</th>
                         <th>Arrival</th>
-                        <th>Depart Date</th>
-                        <th>Arrival Date</th>
+                        <th>Depart Date/Time</th>
+                        <th>Arrival Date/Time</th>
+                        <th>Airlines</th>
                         <th>Price</th>
                     </tr>
                 </thead>
                 <tbody id="flight-body">
                     <tr>
+                        <td>-</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
