--- a/index.html
+++ b/index.html
@@ -88,6 +88,30 @@
 
     </div>
 
+    <div class="banner">
+        <div class="mobile">
+            <div class="mobile_text">
+                <h1>Get Exclusive deals on the go.</h1>
+                <p>Find Great deals on Hotel, flights, car rentals and things to do</p>
+            </div>
+            <div class="mobile_icons">
+                <h2>Download Now</h2>
+                <img src="Images/devices_apps.jpg">
+                
+            </div>
+        </div>
+
+        <div class="mobile_image">
+            <div class="mobile_image1">
+                <img src="Images/iphone-6.png">
+            </div>
+
+        </div>
+
+
+    </div>
+
+
     <div class="testimonials">
         <div class="test1">
             <div class="person">
