--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="banner">
         <div class="mobile">
             <div class="mobile_text">
-                <h1>Get Exclusive deals on the go.</h1>
+                <h1>Get Exclusive deals on the go</h1>
                 <p>Find Great deals on Hotel, flights, car rentals and things to do</p>
             </div>
             <div class="mobile_icons">
@@ -174,9 +174,9 @@
                 <a href="contact.html"><h5>Contact</h5></a>
             </div>
             <div class="link1">
-                <a href="#"><h5>bn,,</h5></a>
-                <a href="#"><h5>nxioww</h5></a>
-                <a href="#"><h5>xnwxwpo</h5></a>
+                <a href="#"><h5>Mobile App</h5></a>
+                <a href="#"><h5>Email Newsletter</h5></a>
+                <a href="#"><h5></h5></a>
             </div>
         </div>
 
