--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
+    <div class='popup'>
+        <div class='popup_box'>
+                <a href='' class='close'>X</a>
+            <h1>Subscribe to our newsletter</h1>
+            <p>Subscribe to our newsletter for our lastest offer and get special offers</p>
+            <input type="email" name="emailaddress" placeholder="Name">
+            <input type="text" name="name" placeholder="Email">
+            <button>Signup Now</button>
+        </div>
+    </div>
+
+
+
     <nav>
         <div class="title">
             <a href="index.html"><h1>The Proffesional Hobo</h1></a>
