--- a/results.html
+++ b/results.html
@@ -26,7 +26,7 @@
     </nav>
     
     <div class="row">
-        <div id="info" class="col-5-sm">
+        <div id="info" class="col-5">
                 <table id="flight-table" class="table table-bordered">
                     <thead>
                         <tr>
