--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 
             </div>
             <div class="person">
-                <h1>greg</h1>
+                <h1>Christopher</h1>
                 <i>"Shiz lobortizzle, shut the shizzle up egizzle 
                 i saw beyonces tizzles and my pizzle went crizzle suscipizzle, 
                 stuff nulla pretium own yo', funky fresh izzle ipsizzle elizzle in risus."</i>
