--- a/hotel_results.html
+++ b/hotel_results.html
@@ -31,8 +31,8 @@
                 <table id="flight-table" class="table table-bordered">
                     <thead>
                         <tr>
-                            <th>Arrival Date</th>
-                            <th>Depart Date</th>
+                            <th>Check-In Date</th>
+                            <th>Check-Out Date</th>
                         </tr>
                     </thead>
                     <tbody id="search-body"></tbody>
