--- a/careers.html
+++ b/careers.html
@@ -5,13 +5,13 @@
     <h1>We are currently not hiring!!!</h1>
 
         <h2>Requirments</h2>
-
-            <ul>5+ experience</ul>
-            <ul>5th grade diploma</ul>
-            <ul>fluent in lorem</ul>
-            <ul>basic experience in Fortnite</ul>
-            <ul>Willing to work for free</ul>
-            <ul></ul>
+            <ul>
+                <li>5+ experience</li>
+                <li>5th grade diploma</li>
+                <li>fluent in lorem</li>
+                <li>basic experience in Fortnite</li>
+                <li>Willing to work for free</li>
+            </ul>
 
             <h2>Submit your information and we will get back to you</h2>
 
@@ -22,4 +22,9 @@
             <input type="number" placeholder="Card-Number"></input>
             <br>
             <button>Submit</button>
+            <br>
+            <br>
+            <br>
+
+            <button><a href="index.html">Go Back</a></button>
 </div>
