--- a/hotel_results.html
+++ b/hotel_results.html
@@ -43,7 +43,7 @@
 
     <div id="results">
         <div class="row">
-            <div class="col-12">
+            <div class="col-10">
                 <table id="flight-table" class="table table-striped table-bordered">
                     <thead>
                         <tr>
@@ -51,7 +51,7 @@
                             <th>Total Price</th>
                         </tr>
                     </thead>
-                    <tbody id="flight-body"></tbody>
+                    <tbody id="flight-body" class="table table-striped table-bordered"></tbody>
                 </table>
             </div>
         </div>
