--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>Subscribe to our newsletter for our lastest offer and get special offers</p>
             <input type="email" name="emailaddress" placeholder="Name">
             <input type="text" name="name" placeholder="Email">
-            <button>Signup Now</button>
+            <button class='sign_up_button'>Signup Now</button>
         </div>
     </div>
 
