terms and conds and minor fixes

--- a/about.html
+++ b/about.html
@@ -50,8 +50,10 @@
         <div class="dev3">
             <img src="Images/44444935.jpeg">
             <h1>Khanh Vu</h1>
-            <p>Bow wow wow maurizzle. Funky fresh da bomb the bizzle, mofo izzle, yippiyo sizzle, bling bling vel, nisi. 
-            We gonna chung shizzlin dizzle consectetizzle fo.</p>
+            <p>Waryfish flathead catfish, Atlantic silverside, warmouth Sacramento blackfish coley; 
+                yellowfin cutthroat trout yellowfin cutthroat trout. Rohu Siamese fighting fish vendace: 
+                Cherubfish peladillo, wahoo ladyfish betta daggertooth pike conger squeaker whiff, white croaker. 
+                </p>
         </div>
         <div class="dev4">
             <img src="Images/36775707.jpeg">
@@ -65,7 +67,7 @@
             <div class="links">
                     <div class="link1">
                         <a href="careers.html"><h5>Careers</h5></a>
-                        <a href="#"><h5>Terms and Conditions</h5></a>
+                        <a href="terms_and_contions.html"><h5>Terms and Conditions</h5></a>
                         <a href="#"><h5>Privacy Policy</h5></a>
                     </div>
                     <div class="link1">
