--- a/careers.html
+++ b/careers.html
@@ -2,7 +2,7 @@
 
 
 
-    <h1>We are currently not hiring!!!</h1>
+    <h1><ins>We are currently not hiring!!!</ins></h1>
 
         <h2>Requirments</h2>
             <ul>
@@ -26,5 +26,5 @@
             <br>
             <br>
 
-            <button><a href="index.html">Go Back</a></button>
+            <button><a href="index.html">Return to Home Page</a></button>
 </div>
