--- a/results.html
+++ b/results.html
@@ -28,7 +28,7 @@
     <div style="display:none;" id="myDiv" class="animate-bottom">
         <div class="container">
             <div class="row">
-                <div id="info" class="col-5">
+                <div id="info" class="col-sm-12 col-lg-5">
                     <table id="flight-table" class="table table-bordered">
                         <thead>
                             <tr>
@@ -40,7 +40,7 @@
                         <tbody id="search-body"></tbody>
                     </table>
                 </div>
-                <div id="info" class="col-5">
+                <div id="info" class="col-sm-12 col-lg-5">
                     <table id="flight-table" class="table table-bordered">
                         <thead>
                             <tr>
@@ -55,7 +55,7 @@
             </div>
             <div id="results">
                 <div class="row">
-                    <div class="col-5">
+                    <div class="col-sm-4 col-lg-5">
                         <table id="flight-table" class="table table-striped table-bordered">
                             <thead>
                                 <tr>
@@ -67,7 +67,7 @@
                             <tbody id="flight-body"></tbody>
                         </table>
                     </div>
-                    <div class="col-5">
+                    <div class="col-sm-4 col-lg-5">
                         <table id="flight-table" class="table table-striped table-bordered">
                             <thead>
                                 <tr>
@@ -79,7 +79,7 @@
                             <tbody id="flight-body2"></tbody>
                         </table>
                     </div>
-                    <div class="col-2">
+                    <div class="col-sm-4 col-lg-2">
                         <table id="flight-table" class="table table-striped table-bordered">
                             <thead>
                                 <tr>
@@ -96,7 +96,7 @@
             <div class="links">
                     <div class="link1">
                         <a href="careers.html"><h5>Careers</h5></a>
-                        <a href="#"><h5>Terms and Conditions</h5></a>
+                        <a href="terms_and_contions.html"><h5>Terms and Conditions</h5></a>
                         <a href="#"><h5>Privacy Policy</h5></a>
                     </div>
                     <div class="link1">
@@ -123,10 +123,6 @@
     </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="script.js"></script>
-<<<<<<< HEAD
-        <script src="api.js"></script>
-=======
         <script src="api.js"></script> 
->>>>>>> master
     </body>
     </html>
