--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
             <div class="links">
                     <div class="link1">
                         <a href="careers.html"><h5>Careers</h5></a>
-                        <a href="#"><h5>Terms and Conditions</h5></a>
+                        <a href="terms_and_contions.html"><h5>Terms and Conditions</h5></a>
                         <a href="#"><h5>Privacy Policy</h5></a>
                     </div>
                     <div class="link1">
