--- a/finalResults.html
+++ b/finalResults.html
@@ -26,45 +26,15 @@
         </div>
     </nav>
     <div style="display:none;" id="myDiv" class="animate-bottom">
-        <div class="container">
-            <div class="row">
-                <div class="col-3"></div>
-                <div id="info" class="col-6">
-                        <table id="flight-table" class="table table-bordered">
-                            <thead>
-                                <tr>
-                                    <th>Arrival Date</th>
-                                    <th>Depart Date</th>
-                                </tr>
-                            </thead>
-                            <tbody id="search-body"></tbody>
-                        </table>
-                </div>
-                <div class="col-3"></div>
-            </div>
 
-            <div id="results">
-                <div class="row">
-                    <div class="col-12">
-                        <table id="flight-table" class="table table-striped table-bordered">
-                            <thead>
-                                <tr>
-                                    <th>Hotel</th>
-                                    <th>Total Price</th>
-                                </tr>
-                            </thead>
-                            <tbody id="flight-body"></tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
+
+
+
         <footer>
-
             <div class="links">
                     <div class="link1">
                         <a href="careers.html"><h5>Careers</h5></a>
-                        <a href="terms_and_contions.html"><h5>Terms and Conditions</h5></a>
+                        <a href="#"><h5>Terms and Conditions</h5></a>
                         <a href="#"><h5>Privacy Policy</h5></a>
                     </div>
                     <div class="link1">
@@ -89,9 +59,8 @@
             </div>
         </footer>
     </div>
-    
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="script.js"></script>
-        <script src="hotel_api.js"></script>
-    </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="script.js"></script>
+    <!-- <script src="api.js"></script>  -->
+</body>
 </html>
