--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
     <div class="banner">
         <div class="mobile">
             <div class="mobile_text">
-                <h1>Get Exclusive deals on the go</h1>
-                <p>Find Great deals on Hotel, flights, car rentals and things to do</p>
+                <h1>Get Exclusive deals on the GO!</h1>
+                <p>Find Great deals on Hotel, Flights, Car Rentals and Things to Do</p>
             </div>
             <div class="mobile_icons">
                 <h2>Download Now</h2>
@@ -139,14 +139,14 @@
 
             </div>
             <div class="person">
-                <h1>zac</h1>
+                <h1>Zac</h1>
                 <i>"Shizzle my nizzle crocodizzle yo erizzle. 
                 Break yo neck, yall doggy my shizz, lacinia crunk amizzle, vulputate vitae, 
                 condimentizzle ac, its fo rizzle."</i>
                 
             </div>
             <div class="person">
-                <h1>katie</h1>
+                <h1>Katie</h1>
                 <i>"Stuff dawg purus. Nullam for sure amizzle 
                 that's the shizzle et bow wow wow tincidunt pellentesque."</i>
                 
@@ -155,13 +155,13 @@
         </div>
         <div class="test2">
             <div class="person">
-                <h1>michael</h1>
+                <h1>Michael</h1>
                 <i>"velizzle rizzle cursus justo, sizzle dang lacizzle shiznit quis enim. 
                 Sizzle fermentum yo mofo"</i>
 
             </div>
             <div class="person">
-                <h1>jr</h1>
+                <h1>Jr</h1>
                 <i>"Get down get down dignissizzle. 
                 In fo shizzle habitasse platea dictumst. Shizzlin dizzle sizzle amet dui. 
                 Bizzle sed dizzle. Aenizzle shizznit risizzle"</i>
@@ -182,7 +182,7 @@
         <div class="links">
             <div class="link1">
                 <a href="careers.html"><h5>Careers</h5></a>
-                <a href="#"><h5>Terms and Conditions</h5></a>
+                <a href="terms_and_contions.html"><h5>Terms and Conditions</h5></a>
                 <a href="#"><h5>Privacy Policy</h5></a>
             </div>
             <div class="link1">
