added return buttons

--- a/hotel_results.html
+++ b/hotel_results.html
@@ -58,6 +58,8 @@
                     </div>
                 </div>
             </div>
+            <button><a href="service_bundle.html">Return to Search</a></button>
+            <button><a href="index.html">Return to Home Page</a></button>
         </div>
         <footer>
 
