--- a/results.html
+++ b/results.html
@@ -25,6 +25,7 @@
             <a href="contact.html">Contact</a>
         </div>
     </nav>
+    
     <div style="display:none;" id="myDiv" class="animate-bottom">
         <div class="container">
             <div class="row">
@@ -91,6 +92,8 @@
                     </div>
                 </div>
             </div>
+            <button><a href="service_bundle.html">Return to Search</a></button>
+            <button><a href="index.html">Return to Home Page</a></button>
         </div>
         <footer>
             <div class="links">
