--- a/hotel_results.html
+++ b/hotel_results.html
@@ -14,6 +14,14 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
+    <div id="myModal" class="modal">
+    <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p class="modal-text">Some text in the Modal..</p>
+        </div>
+    </div>
+              
     <div id="loader"></div>
     <nav>
         <div class="title">
