--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                     <div class="link1">
                         <a href="careers.html"><h5>Careers</h5></a>
                         <a href="terms_and_contions.html"><h5>Terms and Conditions</h5></a>
-                        <a href="#"><h5>Privacy Policy</h5></a>
+                        <a href="privacy.html"><h5>Privacy Policy</h5></a>
                     </div>
                     <div class="link1">
                         <a href="service_bundle.html"><h5>Services</h5></a>
