--- a/hotel_results.html
+++ b/hotel_results.html
@@ -18,7 +18,7 @@
     <!-- Modal content -->
         <div class="modal-content">
             <span class="close">&times;</span>
-            <p class="modal-text">Some text in the Modal..</p>
+            <p class="modal-text"></p>
         </div>
     </div>
               
