--- a/things_result.html
+++ b/things_result.html
@@ -14,7 +14,17 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
-    <div id="loader"></div>
+    <div class="things2do_result">
+        <h1><strong>
+           Things to Do Search Currently Unavailable.<br>
+           Under Construction. 
+        </strong></h1>
+    
+        <button><a href="service_bundle.html">Return to Search</a></button>
+        <button><a href="index.html">Return to Home Page</a></button>
+
+    </div>
+    <!-- <div id="loader"></div>
     <nav>
         <div class="title">
             <a href="index.html"><h4 id="result-title">The Proffesional Hobo</h4></a>
@@ -27,7 +37,7 @@
     </nav>
     <div style="display:none;" id="myDiv" class="animate-bottom">
         <div class="container">
-            <!-- <div class="row">
+            <div class="row">
                 <div class="col-3"></div>
                 <div id="info" class="col-6">
                         <table id="things-table" class="table table-bordered">
@@ -43,7 +53,7 @@
                 <div class="col-3"></div>
             </div> -->
 
-            <div id="results">
+            <!-- <div id="results">
                 <div class="row">
                     <div class="col-12">
                         <table id="things-table" class="table table-striped table-bordered">
@@ -90,7 +100,7 @@
                 <a href="#"><i class="devicon-slack-plain"></i></a>
             </div>
         </footer>
-    </div>
+    </div> --> -->
     
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="script.js"></script>
